grocery-app-prod/K8S/gb-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocery-backend 
  labels:
    app: grocery-backend 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grocery-backend 
  template:
    metadata:
      labels:
        app: grocery-backend 
    spec:
      containers:
      - name: grocery-backend 
        image: xuefeng89/grocery-backend:v1   
        ports:
        - containerPort: 8080
