grocery-app-prod/K8S/wi-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: workload-identity-test
  namespace: groceryk8s
spec:
  containers:
  - image: google/cloud-sdk:slim
    name: workload-identity-test
    command: ["sleep","infinity"]
  serviceAccountName: k8sserviceaccount
