grocery-app-prod/K8S/bop-depoly.yaml
type: post
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backofficeportal-deployment
  labels:
    app: backofficeportal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backofficeportal
  template:
    metadata:
      labels:
        app: backofficeportal
    spec:
      containers:
      - name: backofficeportal
        image: xuefeng89/back-office-portal:v1   
        ports:
        - containerPort: 8080
type: post
---
apiVersion: v1
kind: Service
metadata:
  name: backofficeportal-service
spec:
  selector:
    app: backofficeportal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
