grocery-app-prod/K8S/gb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocery-backend 
spec:
  type: NodePort
  selector:
    app: grocery-backend 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
