grocery-app-prod/K8S/backofficeportal-ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "backofficeportal-ingress"
  namespace: "default"
spec:
  backend:
    serviceName: backofficeportal-service
    servicePort: 80
