grocery-app-prod/K8S/gb-ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "grocery-backend-ingress"
  namespace: "default"
spec:
  backend:
    serviceName: grocery-backend
    servicePort: 80
